ManualRebase of Seeburger master to origin/master + secure serialization