@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements. See the NOTICE file
  * distributed with this work for additional information
@@ -51,18 +51,17 @@ import org.junit.Test;
 import org.osgi.framework.ServiceException;
 
 public class InvocationTest {
-    final static long MILLIS_IN_A_NANO = TimeUnit.MILLISECONDS.toNanos(1);
-    final static long SECONDS_IN_A_NANO = TimeUnit.SECONDS.toNanos(1);
+    static final long MILLIS_IN_A_NANO = TimeUnit.MILLISECONDS.toNanos(1);
+    static final long SECONDS_IN_A_NANO = TimeUnit.SECONDS.toNanos(1);
 
     final int BENCHMARK_CLIENTS = 100;
     final int BENCHMARK_INVOCATIONS_PER_CLIENT = 1000;
-
 
     @Test(timeout=30*1000)
     public void testInvoke() throws Exception {
 
         DispatchQueue queue = Dispatch.createQueue();
-        HashMap<String, SerializationStrategy> map = new HashMap<String, SerializationStrategy>();
+        HashMap<String, SerializationStrategy> map = new HashMap<>();
         map.put("protobuf", new ProtobufSerializationStrategy());
 
         ServerInvokerImpl server = new ServerInvokerImpl("tcp://localhost:0", queue, map);
@@ -80,29 +79,28 @@ public class InvocationTest {
                 }
             }, HelloImpl.class.getClassLoader());
 
-
             InvocationHandler handler = client.getProxy(server.getConnectAddress(), "service-id", HelloImpl.class.getClassLoader(),FastBinProvider.PROTOCOL_VERSION);
-            Hello hello  = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
+            Hello hello = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
 
             assertEquals("Hello Fabric!", hello.hello("Fabric"));
             assertEquals("Hello World!", hello.helloworld());
 
-            // Verification the we can pick the right overloaded method even if using a mixure
+            // Verification that we can pick the right overloaded method even if using a mix
             // of primitives / objects and array dimensions.
             assertEquals('a', hello.mix(0));
             assertEquals('b', hello.mix(new int[]{0}));
-            assertEquals('c', hello.mix(new Integer(0)));
-            assertEquals('d', hello.mix(new Integer[]{new Integer(0)}));
+            assertEquals('c', hello.mix(Integer.valueOf(0)));
+            assertEquals('d', hello.mix(new Integer[]{0}));
             assertEquals('e', hello.mix(new int[0][0]));
             assertEquals('f', hello.mix(new Integer[0][0]));
 
-            AsyncCallbackFuture<String> future1 = new AsyncCallbackFuture<String>();
+            AsyncCallbackFuture<String> future1 = new AsyncCallbackFuture<>();
             hello.hello("Hiram", future1);
             assertEquals("Hello Hiram!", future1.get(2, TimeUnit.SECONDS));
 
             assertEquals("Hello Hiram!", hello.protobuf(stringValue("Hiram")).getValue());
 
-            AsyncCallbackFuture<StringValue.Getter> future2 = new AsyncCallbackFuture<StringValue.Getter>();
+            AsyncCallbackFuture<StringValue.Getter> future2 = new AsyncCallbackFuture<>();
             hello.protobuf(stringValue("Hiram Async"), future2);
             assertEquals("Hello Hiram Async!", future2.get(2, TimeUnit.SECONDS).getValue());
 
@@ -121,7 +119,7 @@ public class InvocationTest {
     public void testInvokeInvalidServiceID() throws Exception {
 
         DispatchQueue queue = Dispatch.createQueue();
-        HashMap<String, SerializationStrategy> map = new HashMap<String, SerializationStrategy>();
+        HashMap<String, SerializationStrategy> map = new HashMap<>();
         map.put("protobuf", new ProtobufSerializationStrategy());
 
         ServerInvokerImpl server = new ServerInvokerImpl("tcp://localhost:0", queue, map);
@@ -139,9 +137,8 @@ public class InvocationTest {
                 }
             }, Hello2Impl.class.getClassLoader());
 
-
             InvocationHandler handler = client.getProxy(server.getConnectAddress(), "service-id-broken", HelloImpl.class.getClassLoader(),FastBinProvider.PROTOCOL_VERSION);
-            Hello2 hello  = (Hello2) Proxy.newProxyInstance(Hello2Impl.class.getClassLoader(), new Class[] { Hello2.class }, handler);
+            Hello2 hello = (Hello2) Proxy.newProxyInstance(Hello2Impl.class.getClassLoader(), new Class[] { Hello2.class }, handler);
 
             try{
                 hello.hello("Fabric");
@@ -163,13 +160,11 @@ public class InvocationTest {
         }
     }
 
-
-
     @Test
     public void testObjectMethods() throws Exception {
 
         DispatchQueue queue = Dispatch.createQueue();
-        HashMap<String, SerializationStrategy> map = new HashMap<String, SerializationStrategy>();
+        HashMap<String, SerializationStrategy> map = new HashMap<>();
         map.put("protobuf", new ProtobufSerializationStrategy());
 
         ServerInvokerImpl server = new ServerInvokerImpl("tcp://localhost:0", queue, map);
@@ -188,10 +183,10 @@ public class InvocationTest {
             }, HelloImpl.class.getClassLoader());
 
             InvocationHandler handler = client.getProxy(server.getConnectAddress(), "service-id", HelloImpl.class.getClassLoader(),FastBinProvider.PROTOCOL_VERSION);
-            Hello hello  = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
-            assertNotEquals("Hashcode should be handled by the proxy and not be a remote call",-7, hello.hashCode());
-            assertFalse("equals should be handled by the proxy and not be a remote call",hello.equals(serviceImpl));
-            assertTrue("the proxy must equal itself",hello.equals(hello));
+            Hello hello = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
+            assertNotEquals("Hashcode should be handled by the proxy and not be a remote call", -7, hello.hashCode());
+            assertFalse("equals should be handled by the proxy and not be a remote call", hello.equals(serviceImpl));
+            assertTrue("the proxy must equal itself", hello.equals(hello));
             assertFalse(hello.equals(null));
             assertFalse(serviceImpl.equals(hello));
         }
@@ -204,85 +199,83 @@ public class InvocationTest {
     @Test(timeout=30*1000)
     public void testOverflowAsync() throws Exception {
 
-    	DispatchQueue queue = Dispatch.createQueue();
-    	HashMap<String, SerializationStrategy> map = new HashMap<String, SerializationStrategy>();
-    	map.put("protobuf", new ProtobufSerializationStrategy());
+        DispatchQueue queue = Dispatch.createQueue();
+        HashMap<String, SerializationStrategy> map = new HashMap<>();
+        map.put("protobuf", new ProtobufSerializationStrategy());
 
-    	ServerInvokerImpl server = new ServerInvokerImpl("tcp://localhost:0", queue, map);
-    	server.start();
+        ServerInvokerImpl server = new ServerInvokerImpl("tcp://localhost:0", queue, map);
+        server.start();
 
-    	ClientInvokerImpl client = new ClientInvokerImpl(queue, map);
-    	client.start();
+        ClientInvokerImpl client = new ClientInvokerImpl(queue, map);
+        client.start();
 
-    	try {
-    		server.registerService("service-id", new ServerInvoker.ServiceFactory() {
-    			public Object get() {
-    				return new HelloImpl();
-    			}
-    			public void unget() {
-    			}
-    		}, HelloImpl.class.getClassLoader());
+        try {
+            server.registerService("service-id", new ServerInvoker.ServiceFactory() {
+                public Object get() {
+                    return new HelloImpl();
+                }
+                public void unget() {
+                }
+            }, HelloImpl.class.getClassLoader());
 
+            InvocationHandler handler = client.getProxy(server.getConnectAddress(), "service-id", HelloImpl.class.getClassLoader(),FastBinProvider.PROTOCOL_VERSION);
+            Hello hello = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
 
-    		InvocationHandler handler = client.getProxy(server.getConnectAddress(), "service-id", HelloImpl.class.getClassLoader(),FastBinProvider.PROTOCOL_VERSION);
-    		Hello hello  = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
+            char[] chars = new char[65 * 1024];
+            String payload = new String(chars);
 
-    		char[] chars = new char[65*1024];
-    		String payload = new String(chars);
+            final List<AsyncCallbackFuture<String>> futures = new ArrayList<>();
+            for(int i = 0; i < 100; i++) {
+                AsyncCallbackFuture<String> future = new AsyncCallbackFuture<>();
+                hello.hello(payload, future);
+                futures.add(future);
+            }
 
-    		final List<AsyncCallbackFuture<String>> futures = new ArrayList<AsyncCallbackFuture<String>>();
-    		for(int i = 0; i < 100; i++) {
-    			AsyncCallbackFuture<String> future = new AsyncCallbackFuture<String>();
-    			hello.hello(payload, future);
-    			futures.add(future);
-    		}
+            for(Future<String> f : futures) {
+                f.get(3, TimeUnit.SECONDS);
+            }
+            //future2.get(2, TimeUnit.SECONDS);
+            //assertEquals("Hello Hiram!", future1.get(2, TimeUnit.SECONDS));
 
-    		for(Future<String> f : futures) {
-    			f.get(3, TimeUnit.SECONDS);
-    		}
-//			future2.get(2, TimeUnit.SECONDS);
-    		//assertEquals("Hello Hiram!", future1.get(2, TimeUnit.SECONDS));
-
-    		//assertEquals("Hello Hiram!", hello.protobuf(stringValue(payload)).getValue());
-    	}
-    	finally {
-    		server.stop();
-    		client.stop();
-    	}
+            //assertEquals("Hello Hiram!", hello.protobuf(stringValue(payload)).getValue());
+        }
+        finally {
+            server.stop();
+            client.stop();
+        }
     }
 
     @Test(timeout=30*1000)
     public void testOverflow() throws Exception {
 
-    	DispatchQueue queue = Dispatch.createQueue();
-    	HashMap<String, SerializationStrategy> map = new HashMap<String, SerializationStrategy>();
-    	map.put("protobuf", new ProtobufSerializationStrategy());
+        DispatchQueue queue = Dispatch.createQueue();
+        HashMap<String, SerializationStrategy> map = new HashMap<>();
+        map.put("protobuf", new ProtobufSerializationStrategy());
 
-    	ServerInvokerImpl server = new ServerInvokerImpl("tcp://localhost:0", queue, map);
-    	server.start();
+        ServerInvokerImpl server = new ServerInvokerImpl("tcp://localhost:0", queue, map);
+        server.start();
 
-    	ClientInvokerImpl client = new ClientInvokerImpl(queue, map);
-    	client.start();
+        ClientInvokerImpl client = new ClientInvokerImpl(queue, map);
+        client.start();
 
-    	try {
-    		server.registerService("service-id", new ServerInvoker.ServiceFactory() {
-    			public Object get() {
-    				return new HelloImpl();
-    			}
-    			public void unget() {
-    			}
-    		}, HelloImpl.class.getClassLoader());
+        try {
+            server.registerService("service-id", new ServerInvoker.ServiceFactory() {
+                public Object get() {
+                    return new HelloImpl();
+                }
+                public void unget() {
+                }
+            }, HelloImpl.class.getClassLoader());
 
-
-    		InvocationHandler handler = client.getProxy(server.getConnectAddress(), "service-id", HelloImpl.class.getClassLoader(),FastBinProvider.PROTOCOL_VERSION);
-    		final Hello hello  = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
+            InvocationHandler handler = client.getProxy(server.getConnectAddress(), "service-id", HelloImpl.class.getClassLoader(),FastBinProvider.PROTOCOL_VERSION);
+            final Hello hello = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
 
             final AtomicInteger requests = new AtomicInteger(0);
             final AtomicInteger responses = new AtomicInteger(0);
             final AtomicInteger failures = new AtomicInteger(0);
 
-    		char[] chars = new char[65*1024];
-    		final String payload = new String(chars);
+            char[] chars = new char[65 * 1024];
+            final String payload = new String(chars);
 
             Thread[] threads = new Thread[BENCHMARK_CLIENTS];
             for (int t = 0; t < BENCHMARK_CLIENTS; t++) {
@@ -306,62 +299,61 @@ public class InvocationTest {
                 threads[t].join(50000);
                 System.err.format("REQUEST: %d of %d%n", requests.get(), BENCHMARK_CLIENTS);
                 System.err.format("RESPONSES: %d of %d%n", responses.get(), BENCHMARK_CLIENTS);
-                assertEquals(threads[t].isAlive(), false);
+                assertFalse(threads[t].isAlive());
             }
 
             assertEquals(BENCHMARK_CLIENTS, requests.get());
             assertEquals(BENCHMARK_CLIENTS, responses.get());
             assertEquals(0, failures.get());
 
-    	}
-    	finally {
-    		server.stop();
-    		client.stop();
-    	}
+        }
+        finally {
+            server.stop();
+            client.stop();
+        }
     }
 
     @Test(timeout=30*1000)
     public void testNoOverflow() throws Exception {
 
-    	DispatchQueue queue = Dispatch.createQueue();
-    	HashMap<String, SerializationStrategy> map = new HashMap<String, SerializationStrategy>();
-    	map.put("protobuf", new ProtobufSerializationStrategy());
+        DispatchQueue queue = Dispatch.createQueue();
+        HashMap<String, SerializationStrategy> map = new HashMap<>();
+        map.put("protobuf", new ProtobufSerializationStrategy());
 
-    	ServerInvokerImpl server = new ServerInvokerImpl("tcp://localhost:0", queue, map);
-    	server.start();
+        ServerInvokerImpl server = new ServerInvokerImpl("tcp://localhost:0", queue, map);
+        server.start();
 
-    	ClientInvokerImpl client = new ClientInvokerImpl(queue, map);
-    	client.start();
+        ClientInvokerImpl client = new ClientInvokerImpl(queue, map);
+        client.start();
 
-    	try {
-    		server.registerService("service-id", new ServerInvoker.ServiceFactory() {
-    			public Object get() {
-    				return new HelloImpl();
-    			}
-    			public void unget() {
-    			}
-    		}, HelloImpl.class.getClassLoader());
+        try {
+            server.registerService("service-id", new ServerInvoker.ServiceFactory() {
+                public Object get() {
+                    return new HelloImpl();
+                }
+                public void unget() {
+                }
+            }, HelloImpl.class.getClassLoader());
 
+            InvocationHandler handler = client.getProxy(server.getConnectAddress(), "service-id", HelloImpl.class.getClassLoader(),FastBinProvider.PROTOCOL_VERSION);
+            Hello hello = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
 
-    		InvocationHandler handler = client.getProxy(server.getConnectAddress(), "service-id", HelloImpl.class.getClassLoader(),FastBinProvider.PROTOCOL_VERSION);
-    		Hello hello  = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
+            char[] chars = new char[65 * 1024];
+            String payload = new String(chars);
 
-    		char[] chars = new char[65*1024];
-    		String payload = new String(chars);
-
-    		for(int i = 0; i < 100; i++) {
-    			hello.hello(payload);
-    		}
-    	}
-    	finally {
-    		server.stop();
-    		client.stop();
-    	}
+            for(int i = 0; i < 100; i++) {
+                hello.hello(payload);
+            }
+        }
+        finally {
+            server.stop();
+            client.stop();
+        }
     }
 
     @Test(timeout=30*1000)
     public void testUnderLoadSyncObject() throws Exception {
-        HashMap<String, SerializationStrategy> map = new HashMap<String, SerializationStrategy>();
+        HashMap<String, SerializationStrategy> map = new HashMap<>();
 
         DispatchQueue queue = Dispatch.createQueue();
         ServerInvokerImpl server = new ServerInvokerImpl("tcp://localhost:0", queue, map);
@@ -379,16 +371,15 @@ public class InvocationTest {
                 }
             }, HelloImpl.class.getClassLoader());
 
-
             InvocationHandler handler = client.getProxy(server.getConnectAddress(), "service-id", HelloImpl.class.getClassLoader(),FastBinProvider.PROTOCOL_VERSION);
 
-            final Hello hello  = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
+            final Hello hello = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
 
             assertEquals("Hello World!", hello.helloworld());
 
             final AtomicInteger requests = new AtomicInteger(0);
             final AtomicInteger failures = new AtomicInteger(0);
-            final long latencies[] = new long[BENCHMARK_CLIENTS * BENCHMARK_INVOCATIONS_PER_CLIENT];
+            final long[] latencies = new long[BENCHMARK_CLIENTS * BENCHMARK_INVOCATIONS_PER_CLIENT];
 
             final long start = System.nanoTime();
             Thread[] threads = new Thread[BENCHMARK_CLIENTS];
@@ -404,11 +395,11 @@ public class InvocationTest {
                                 final long start = System.nanoTime();
                                 response = hello.hello("Fabric");
                                 final long end = System.nanoTime();
-                                latencies[(thread_idx* BENCHMARK_INVOCATIONS_PER_CLIENT)+i] = end-start;
+                                latencies[(thread_idx * BENCHMARK_INVOCATIONS_PER_CLIENT) + i] = end - start;
 
                                 assertEquals("Hello Fabric!", response);
                             } catch (Throwable t) {
-                                latencies[(thread_idx* BENCHMARK_INVOCATIONS_PER_CLIENT)+i] = -1;
+                                latencies[(thread_idx * BENCHMARK_INVOCATIONS_PER_CLIENT) + i] = -1;
                                 failures.incrementAndGet();
                                 if (t instanceof UndeclaredThrowableException) {
                                     t = ((UndeclaredThrowableException) t).getUndeclaredThrowable();
@@ -427,16 +418,16 @@ public class InvocationTest {
             final long end = System.nanoTime();
 
             long latency_sum = 0;
-            for (int t = 0; t < latencies.length; t++) {
-                if( latencies[t] != -1 ) {
-                    latency_sum += latencies[t];
+            for (long latency : latencies) {
+                if (latency != -1) {
+                    latency_sum += latency;
                 }
             }
-            double latency_avg = ((latency_sum * 1.0d)/requests.get()) / MILLIS_IN_A_NANO;
-            double request_rate = ((requests.get() * 1.0d)/(end-start)) * SECONDS_IN_A_NANO;
+            double latency_avg = ((latency_sum * 1.0d) / requests.get()) / MILLIS_IN_A_NANO;
+            double request_rate = ((requests.get() * 1.0d) / (end - start)) * SECONDS_IN_A_NANO;
 
-            System.err.println(String.format("Requests/Second: %,.2f", request_rate));
-            System.err.println(String.format("Average request latency: %,.2f ms", latency_avg));
+            System.err.printf("Requests/Second: %,.2f%n", request_rate);
+            System.err.printf("Average request latency: %,.2f ms%n", latency_avg);
             System.err.println("Error Ratio: " + failures.get() + " / " + requests.get());
         }
         finally {
@@ -444,7 +435,6 @@ public class InvocationTest {
             client.stop();
         }
     }
-
 
     @Test(timeout=30*1000)
     public void testInvokeWithBindAddress() throws Exception {
@@ -505,7 +495,7 @@ public class InvocationTest {
 
         final int thread_idx;
         final int nbInvocationsPerThread;
-        final long latencies[];
+        final long[] latencies;
         final AtomicInteger requests;
         final AtomicInteger failures;
         final Hello hello;
@@ -516,7 +506,6 @@ public class InvocationTest {
 
         int i;
         long start;
-
 
         AsyncClient(int thread_idx, int nbInvocationsPerThread, Hello hello, AtomicInteger failures, AtomicInteger requests, long[] latencies) {
             this.failures = failures;
@@ -550,14 +539,14 @@ public class InvocationTest {
         }
 
         public void onSuccess(StringValue.Getter result) {
-            latencies[(thread_idx*nbInvocationsPerThread)+i] = System.nanoTime() -start;
+            latencies[(thread_idx * nbInvocationsPerThread) + i] = System.nanoTime() - start;
             i++;
             sendNext();
         }
 
         public void onFailure(Throwable t) {
             failures.incrementAndGet();
-            latencies[(thread_idx*nbInvocationsPerThread)+i] = -1;
+            latencies[(thread_idx * nbInvocationsPerThread) + i] = -1;
             i++;
             if (t instanceof UndeclaredThrowableException) {
                 t = ((UndeclaredThrowableException) t).getUndeclaredThrowable();
@@ -567,9 +556,9 @@ public class InvocationTest {
         }
     }
 
-    @Test
+    @Test()
     public void testUnderLoadAsyncProto() throws Exception {
-        HashMap<String, SerializationStrategy> map = new HashMap<String, SerializationStrategy>();
+        HashMap<String, SerializationStrategy> map = new HashMap<>();
         map.put("protobuf", new ProtobufSerializationStrategy());
 
         DispatchQueue queue = Dispatch.createQueue();
@@ -589,14 +578,13 @@ public class InvocationTest {
                 }
             }, HelloImpl.class.getClassLoader());
 
-
             InvocationHandler handler = client.getProxy(server.getConnectAddress(), "service-id", HelloImpl.class.getClassLoader(),FastBinProvider.PROTOCOL_VERSION);
 
-            final Hello hello  = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
+            final Hello hello = (Hello) Proxy.newProxyInstance(HelloImpl.class.getClassLoader(), new Class[] { Hello.class }, handler);
 
             final AtomicInteger requests = new AtomicInteger(0);
             final AtomicInteger failures = new AtomicInteger(0);
-            final long latencies[] = new long[BENCHMARK_CLIENTS * BENCHMARK_INVOCATIONS_PER_CLIENT];
+            final long[] latencies = new long[BENCHMARK_CLIENTS * BENCHMARK_INVOCATIONS_PER_CLIENT];
 
             final long start = System.nanoTime();
             AsyncClient[] threads = new AsyncClient[BENCHMARK_CLIENTS];
@@ -611,16 +599,16 @@ public class InvocationTest {
             final long end = System.nanoTime();
 
             long latency_sum = 0;
-            for (int t = 0; t < latencies.length; t++) {
-                if( latencies[t] != -1 ) {
-                    latency_sum += latencies[t];
+            for (long latency : latencies) {
+                if (latency != -1) {
+                    latency_sum += latency;
                 }
             }
-            double latency_avg = ((latency_sum * 1.0d)/requests.get()) / MILLIS_IN_A_NANO;
-            double request_rate = ((requests.get() * 1.0d)/(end-start)) * SECONDS_IN_A_NANO;
+            double latency_avg = ((latency_sum * 1.0d) / requests.get()) / MILLIS_IN_A_NANO;
+            double request_rate = ((requests.get() * 1.0d) / (end - start)) * SECONDS_IN_A_NANO;
 
-            System.err.println(String.format("Requests/Second: %,.2f", request_rate));
-            System.err.println(String.format("Average request latency: %,.2f ms", latency_avg));
+            System.err.printf("Requests/Second: %,.2f%n", request_rate);
+            System.err.printf("Average request latency: %,.2f ms%n", latency_avg);
             System.err.println("Error Ratio: " + failures.get() + " / " + requests.get());
         }
         finally {
@@ -652,7 +640,7 @@ public class InvocationTest {
 
     }
 
-    static private StringValue.Bean stringValue(String hello) {
+    private static StringValue.Bean stringValue(String hello) {
         StringValue.Bean rc = new StringValue.Bean();
         rc.setValue(hello);
         return rc;
@@ -726,8 +714,7 @@ public class InvocationTest {
         }
 
         @Override
-        public int hashCode()
-        {
+        public int hashCode() {
             return -7;
         }
     }
@@ -749,9 +736,7 @@ public class InvocationTest {
         @Override
         public Future<String> helloAsync(final String name) {
             ExecutorService executor = Executors.newSingleThreadExecutor();
-            return executor.submit(() -> {
-                return hello(name);
-            });
+            return executor.submit(() -> hello(name));
         }
     }
 
